2002-03-02  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-index.c: 
	- in-the-middle-commit on index search stuff.
	(yvi_entry_changed_cb): added
	(yvi_entry_activated_cb): added
	(yvi_entry_text_inserted_cb): added
	(yvi_search): added
	(yvi_complete_idle): added
	(yvi_complete_func): added
	(yelp_view_index_new): connect to signals in the entry.

	* src/yelp-scrollkeeper.c: removed debug variable.

	* src/yelp-index-model.[ch]: added model for the index.

	* configure.in: added compile warnings.

2002-02-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-window.c:
	(yw_about_cb): added translator-credits to about-box.
	- #72636 fixed.
	- added GtkItemFactory to priv-struct.
	- added a Go-menu with the actions from the toolbar in it.
	- removed accelerators from toolbar items.
	- renamed some functions that made it easier to add the Go-menu.

2002-02-28  Sandeep V Honde <sandeep.honde@wipro.com>

	* src/yelp-main.c :
	- Basic support for Session Management.
	(yelp_save_session): added/impl.
	(yelp_client_die)  : added/impl.  

2002-02-28  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-index.c:
	(yelp_view_index_new): Added "Search for:" label in fron of the
	  search entry. Fixes #72643

	* src/yelp-window.c:
	(yw_create_toolbar): 
	- Update string, fixes #72634
	- Update string, fixes #72635

	* src/yelp-view-toc.c:
	(yelp_view_toc_man_1): Update string, fixes #72638
	(yelp_view_toc_start): Update string, fixes #72632

2002-02-25  Mikael Hallendal  <micke@codefactory.se>

	* src/yelp-view-index.c:
	(yvi_index_term_add): added/impl.
	(yvi_setup_index_view): added/impl.
	(yelp_view_index_new): call yvi_setup_index_view.

	* src/yelp-scrollkeeper.c: removed some debug printouts.

	* src/yelp-window.c:
	(yelp_window_new): added index-list to arguments.

	* src/yelp-view-index.c: started to fix (was a copy&paste from
	  yelp-view-content.

	* src/yelp-section.h: added YELP_SECTION_INDEX to YelpSectionType.
