@@ -1,6 +1,15 @@
 2002-03-02  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/yelp-view-index.c: 
+	- replaced the old ListStore with the new YelpIndexModel.
+	(yvi_index_term_add): removed, not needed when using own model.
+	(yvi_setup_index_view): removed.
+	
+	* src/yelp-index-model.[ch]: missed some copy&paste-changes when
+	  copying the model from MrProject :)
+	(yelp_index_model_set_words): added.
+
+	* src/yelp-view-index.c: 
 	- in-the-middle-commit on index search stuff.
 	(yvi_entry_changed_cb): added
 	(yvi_entry_activated_cb): added
